--- a/FrontEnd/northwind/src/app/app.component.html
+++ b/FrontEnd/northwind/src/app/app.component.html
@@ -1,1 +1,9 @@
+<!--Welcome to {{title}}
+Hello {{user}}-->
+
+
+<app-navi></app-navi>
+<app-category></app-category>
+<app-product></app-product>
+
 <router-outlet></router-outlet>
